# snapsearch

./: .env  .env.example  README.md  agent.py  embeddings.py  models.py  pyproject.toml  requirements.txt  server.py  vision.py
src/snapsearch/: __init__.py  agent.py  embeddings.py  models.py  server.py  vision.py
