[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snapsearch-mcp"
version = "0.1.1"
description = "Your Mac screenshots folder is a disaster. This fixes it — with vision, embeddings, and semantic search."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

authors = [
    { name = "Shantanu Kumar", email = "shantanuk436@gmail.com" }
]

dependencies = [
    "mcp>=1.27.0",
    "openai-agents>=0.17.0",
    "openai>=1.109.0",
    "chromadb>=1.5.0",
    "pydantic>=2.0.0",
    "Pillow>=10.0.0",
    "python-dotenv"
]

[project.scripts]
snapsearch-agent = "snapsearch.agent:sync_main"
snapsearch-mcp = "snapsearch.server:sync_main"

[tool.hatch.build.targets.wheel]
packages = ["src/snapsearch"]